Cracking on with procrystals

--- a/references.bib
+++ b/references.bib
@@ -65,6 +65,16 @@ title = {{Crystalline thin films of silica : modelling , structure and energetic
 volume = {30},
 year = {2018}
 }
+@article{Camp2012,
+author = {Camp, Philip J and Fuertes, Amparo and Attfield, J P},
+doi = {10.1021/ja300847m},
+file = {:Users/David/Documents/Work/DPhil/Papers/ja300847m-2.pdf:pdf},
+journal = {J Am Chem Soc},
+pages = {6762--6766},
+title = {{Subextensive Entropies and Open Order in Perovskite Oxynitrides}},
+volume = {134},
+year = {2012}
+}
 @article{Boots1984,
 author = {Boots, B. N.},
 doi = {10.1016/0026-0800(84)90077-6},
@@ -82,6 +92,17 @@ publisher = {CRC Press},
 title = {{Handbook of Markov Chain Monte Carlo}},
 year = {2011}
 }
+@article{Gorbunov2017,
+author = {Gorbunov, V A and Akimenko, S S and Myshlyavtsev, A V},
+doi = {10.1039/c7cp01863k},
+file = {:Users/David/Documents/Work/DPhil/Papers/c7cp01863k.pdf:pdf},
+journal = {Phys Chem Chem Phys},
+pages = {17111--17120},
+publisher = {Royal Society of Chemistry},
+title = {{Cross-impact of surface and interaction anisotropy in the self-assembly of organic adsorption monolayers : a Monte Carlo}},
+volume = {19},
+year = {2017}
+}
 @article{Wales1999,
 author = {Wales, David J and Scheraga, Harold A},
 file = {:Users/David/Documents/Work/DPhil/Papers/2898778.pdf:pdf},
@@ -90,6 +111,17 @@ pages = {1368--1372},
 title = {{Global Optimization of Clusters, Crystals, and Biomolecules}},
 volume = {285},
 year = {1999}
+}
+@article{Zhu2017,
+author = {Zhu, YinBo and Wang, FengChao and Wu, HengAn},
+doi = {10.1063/1.4995432},
+file = {:Users/David/Documents/Work/DPhil/Papers/1.4995432.pdf:pdf},
+journal = {J. Chem. Phys.},
+pages = {044706},
+title = {{Structural and dynamic characteristics in monolayer square ice}},
+url = {http://dx.doi.org/10.1063/1.4995432},
+volume = {147},
+year = {2017}
 }
 @article{Chremos2007,
 abstract = {The neighbor network in a two-dimensional polydisperse hard-disk fluid with diameter distribution p(sigma) approximately sigma(-4) is examined using constant-pressure Monte Carlo simulations. Graphs are constructed from vertices (disks) with edges (links) connecting each vertex to k neighboring vertices defined by a radical tessellation. At packing fractions in the range 0.24{\textless} or =eta{\textless} or =0.36, the decay of the network degree distribution is observed to be consistent with the power law k(-gamma) where the exponent lies in the range 5.6{\textless} or =gamma{\textless} or =6.0 . Comparisons with the predictions of a maximum-entropy theory suggest that this apparent power-law behavior is not the asymptotic one and that p(k) approximately k(-4) in the limit k--{\textgreater}infinity. This is consistent with the simple idea that for large disks, the number of neighbors is proportional to the disk diameter. A power-law decay of the network degree distribution is one of the characteristics of a scale-free network. The assortativity of the network is measured and is found to be positive, meaning that vertices of equal degree are connected more often than in a random network. Finally, the equation of state is determined and compared with the prediction from a scaled-particle theory. Very good agreement between simulation and theory is demonstrated.},
@@ -171,6 +203,15 @@ title = {{Anchored boundary conditions for locally isostatic networks}},
 volume = {92},
 year = {2015}
 }
+@article{Anderson1973,
+author = {Anderson, P W},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-0025540873901670-main.pdf:pdf},
+journal = {Mat. Res. Bull.},
+pages = {153--160},
+title = {{RESONATING VALENCE BONDS" A NEW KIND OF INSULATOR?}},
+volume = {8},
+year = {1973}
+}
 @article{Tong2017,
 author = {Tong, Mingming and Cole, Katie and Brito-Parada, Pablo R and Neethling, Stephen and Cilliers, Jan J},
 doi = {10.1021/acs.langmuir.6b03663},
@@ -251,6 +292,15 @@ pages = {20765--20776},
 title = {{Potential Energy and Free Energy Landscapes}},
 volume = {110},
 year = {2006}
+}
+@article{Blunt2008,
+author = {Blunt, Matthew O and Russell, James C and Gim{\'{e}}nez-L{\'{o}}pez, Mar{\'{i}}a Carmen and Garrahan, J P and Lin, Xiang and Schr{\"{o}}der, Martin and Champness, Neil R and Beton, Peter H},
+file = {:Users/David/Documents/Work/DPhil/Papers/20145272.pdf:pdf},
+journal = {Science (80-. ).},
+pages = {1077--1081},
+title = {{Random Tiling and Topological Defects in a Two-Dimensional Molecular Network}},
+volume = {322},
+year = {2008}
 }
 @article{Ladan2019,
 author = {Ladan, M Kokalj and Ziherl, P and {\v{S}}iber, A},
@@ -478,6 +528,16 @@ title = {{High-quality continuous random networks}},
 volume = {62},
 year = {2000}
 }
+@article{Postulka2016,
+author = {Postulka, Lars and Winter, Stephen M and Mihailov, Adam G and Mailman, Aaron and Assoud, Abdeljalil and Robertson, Craig M and Wolf, Bernd and Lang, Michael and Oakley, Richard T},
+doi = {10.1021/jacs.6b05079},
+file = {:Users/David/Documents/Work/DPhil/Papers/jacs.6b05079.pdf:pdf},
+journal = {J. Am. Chem. Soc.},
+pages = {10738--10741},
+title = {{Spin Frustration in an Organic Radical Ion Salt Based on a Kagome-Coupled Chain Structure}},
+volume = {138},
+year = {2016}
+}
 @article{Boots1983,
 author = {Boots, B N},
 file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-0098300483900067-main.pdf:pdf},
@@ -584,6 +644,16 @@ title = {{Strict detailed balance is unnecessary in Monte Carlo simulation}},
 volume = {110},
 year = {1999}
 }
+@article{Nieckarz2018,
+author = {Nieckarz, Damien and Rzysko, Wojciech and Szabelski, Pawe{\l}},
+doi = {10.1039/c8cp03820a},
+file = {:Users/David/Documents/Work/DPhil/Papers/c8cp03820a.pdf:pdf},
+journal = {Phys Chem Chem Phys},
+pages = {23363},
+title = {{On-surface self-assembly of tetratopic molecular building blocks}},
+volume = {20},
+year = {2018}
+}
 @article{Ninarello2017,
 author = {Ninarello, Andrea and Berthier, Ludovic and Coslovich, Daniele},
 doi = {10.1103/PhysRevX.7.021039},
@@ -603,6 +673,17 @@ pages = {383--396},
 title = {{The Arrangement of Cells in a Net. III}},
 volume = {17},
 year = {1984}
+}
+@article{Chen2011,
+author = {Chen, Ting and Yan, Hui-Juan and Zhang, Xu and Wang, Dong and Wan, Li-Jun},
+doi = {10.1002/asia.201000640},
+file = {:Users/David/Documents/Work/DPhil/Papers/asia.201000640.pdf:pdf},
+journal = {Chem Asian J},
+keywords = {calixarenes,nanostruc-,polymorphism,scanning,tures},
+pages = {1811--1816},
+title = {{2D Hexagonal Tilings Based on Triangular and Hexagonal Structural Units in the Self-Assembly of Thiacalix[4]arene Tetrasulfonate on an Au(111) Surface}},
+volume = {6},
+year = {2011}
 }
 @article{Wang2017,
 author = {Wang, Zhi and Su, Hai-Feng and Tan, Yuan-Zhi and Schein, Stan and Lin, Shui-Chao and Liu, Wei and Wang, Shu-Ao and Wang, Wen-Guang and Tung, Chen-Ho and Sun, Di and Zheng, Lan-Sun},
@@ -639,6 +720,16 @@ pmid = {22114049},
 title = {{The atomic structure of a metal-supported vitreous thin silica film}},
 volume = {51},
 year = {2012}
+}
+@article{Urgel2014,
+author = {Urgel, Jose I and Ecija, David and Auwa, Willi and Papageorgiou, Anthoula C and Seitsonen, Ari P and Vijayaraghavan, Saranyan and Joshi, Sushobhan and Fischer, Sybille and Reichert, Joachim and Barth, Johannes V},
+doi = {10.1021/jp502901z},
+file = {:Users/David/Documents/Work/DPhil/Papers/jp502901z.pdf:pdf},
+journal = {J Phys Chem C},
+pages = {12908--12915},
+title = {{Five-Vertex Lanthanide Coordination on Surfaces: A Route to Sophisticated Nanoarchitectures and Tessellations}},
+volume = {118},
+year = {2014}
 }
 @article{Edwards1994,
 abstract = {In this paper we present an alternative derivation of the Aboav-Weaire law. By first making the assumption that the mean of the number of sides surrounding a cell is a function of the time, leads to Mn, the mean number of sides surrounding a cell of sides n, as a linear function of the second moment $\mu$, and is independent of n. This indicates that the local mean increases with time. When written in the form of the general Aboav-Weaire relation we find in their notation that a = 1 and b = 6 7. The analysis also leads to the relation that the deviation from the ensemble average, 6, is proportional to $\mu$, and b is the coefficient of proportionality. The initial assumption is removed and the assumption that Mn is now a function of time and the number of sides is made. This assumption leads to Mn as a linear function of the ratio $\mu$/(n+1). This applies in the limit of small $\mu$ and the assumption that Mn can be expanded as a Maclaurin series. When written in the form of the general Aboav-Weaire law a = 1 and b = 0. This implies that the deviation from the mean 6 is then proportional to $\mu$/(n+1). A similar analysis is applied to three dimensions and when the faces of the cells are considered we find that the average number of faces of the cells surrounding a cell of face {\{}cauchy integral{\}} is a linear function of $\mu$/({\{}cauchy integral{\}}+;1), where $\mu$ is the second moment of the faces with mean 14. This analysis of the mean number of sides surrounding a cell is extended to finding the mean area surrounding a cell of sides n and area A, MAn. It is found that the mean area of the cells MAn is given by MAn = Aa + (Aa - A)/n, where Aa is the local cell area average which in the first approximation can be treated as the ensemble average area. Similarly the mean volume of cells surrounding a cell of faces {\{}cauchy integral{\}} and volume v is given by Mv{\{}cauchy integral{\}} = va + (va - v)/{\{}cauchy integral{\}}, where va is the average local volume. In this case cells of small areas (volumes) are surrounded by cells of areas (volumes) greater than the average area (volume). We can reverse the argument to show that the large area (volume) cells are surrounded by small area (volume) cells. The results of this analysis indicates that the cells are not randomly distributed. {\textcopyright} 1994.},
@@ -786,6 +877,17 @@ pages = {4899--4902},
 title = {{Properties of a Continuous-Random-Network Model for Amorphous Systems}},
 volume = {81},
 year = {1998}
+}
+@article{Song2015,
+author = {Song, Bai-Qiao and Wang, Xin-Long and Zhang, Yu-Teng and Wu, Xue-Song and Liu, Hong-Sheng and Shao, Kui-Zhan and Su, Zhong-Min},
+doi = {10.1039/c5cc02639c},
+file = {:Users/David/Documents/Work/DPhil/Papers/c5cc02639c.pdf:pdf},
+journal = {Chem Commun},
+pages = {9515--9518},
+publisher = {Royal Society of Chemistry},
+title = {{Periodic tiling of triangular and square nanotubes in a cationic metal – organic framework for selective anion exchange †}},
+volume = {51},
+year = {2015}
 }
 @article{Lewandowski2019,
 author = {Lewandowski, L and Tosoni, Sergio and Gura, Leonard and Schlexer, Philomena and Marschalik, Patrik and Schneider, Wolf-dieter and Heyde, Markus and Pacchioni, Gianfranco and Freund, Hans-Joachim},
@@ -954,6 +1056,16 @@ booktitle = {Wiley},
 publisher = {Wiley},
 title = {{Spatial Tessellations: Concepts and Applications of Voronoi Diagrams}},
 year = {1992}
+}
+@article{Zheng2014,
+author = {Zheng, Qing-Na and Wang, Lei and Zhong, Yu-Wu and Liu, Xuan-He and Chen, Ting and Yan, Hui-Juan and Wang, Dong and Yao, Jian-Nian and Wan, Li-Jun},
+doi = {10.1021/la5002418},
+file = {:Users/David/Documents/Work/DPhil/Papers/la5002418.pdf:pdf},
+journal = {Langmuir},
+pages = {3034--3040},
+title = {{Adaptive Reorganization of 2D Molecular Nanoporous Network Induced by Coadsorbed Guest Molecule}},
+volume = {30},
+year = {2014}
 }
 @article{Gibson2011,
 abstract = {For nearly 150 years, it has been recognized that cell shape strongly influences the orientation of the mitotic cleavage plane (e.g.; Hofmeister, 1863). However, we still understand little about the complex interplay between cell shape and cleavage-plane orientation in epithelia, where polygonal cell geometries emerge from multiple factors, including cell packing, cell growth, and cell division itself. Here, using mechanical simulations, we show that the polygonal shapes of individual cells can systematically bias the long-axis orientations of their adjacent mitotic neighbors. Strikingly, analyses of both animal epithelia and plant epidermis confirm a robust and nearly identical correlation between local cell topology and cleavage-plane orientation in vivo. Using simple mathematics, we show that this effect derives from fundamental packing constraints. Our results suggest that local epithelial topology is a key determinant of cleavage-plane orientation, and that cleavage-plane bias may be a widespread property of polygonal cell sheets in plants and animals. {\textcopyright} 2011 Elsevier Inc.},
@@ -1124,6 +1236,16 @@ title = {{Monte Carlo Simulation}},
 volume = {32},
 year = {1992}
 }
+@article{Algara-Siller2015,
+author = {Algara-Siller, G and Lehtinen, O and Wang, F C and Nair, R R and Kaiser, U and Wu, H A and K, Geim A and Grigorieva, I V},
+doi = {10.1038/nature14295},
+file = {:Users/David/Documents/Work/DPhil/Papers/nature14295-2.pdf:pdf},
+journal = {Nature},
+pages = {443},
+title = {{Square ice in graphene nanocapillaries}},
+volume = {519},
+year = {2015}
+}
 @misc{eumap,
 author = {Eurostat},
 publisher = {Eurostat},
@@ -1139,6 +1261,16 @@ pages = {313--329},
 title = {{Characterisation of Models of Multicomponent Amorphous Metals: the Radical Alternative to the Voronoi Polyhedron}},
 volume = {50},
 year = {1982}
+}
+@article{Buzano2004,
+author = {Buzano, C and Stefanis, E De and Pelizzola, A and Pretti, M},
+doi = {10.1103/PhysRevE.69.061502},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevE.69.061502.pdf:pdf},
+journal = {Phys. Rev. E},
+pages = {061502},
+title = {{Two-dimensional lattice-fluid model with waterlike anomalies}},
+volume = {69},
+year = {2004}
 }
 @article{Wooten1985,
 author = {Wooten, F and Winer, K and Weaire, D},
@@ -1171,6 +1303,20 @@ title = {{Appearance of collectivity in two-dimensional cellular structures}},
 url = {http://linkinghub.elsevier.com/retrieve/pii/S0927025699000312},
 volume = {15},
 year = {1999}
+}
+@article{Baise2018,
+author = {Baise, Mia and Maffettone, Phillip M and Trousselet, Fabien and Funnell, Nicholas P and Coudert, Fran{\c{c}}ois-Xavier and Goodwin, Andrew L},
+doi = {10.1103/PhysRevLett.120.265501},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevLett.120.265501.pdf:pdf},
+issn = {1079-7114},
+journal = {Phys. Rev. Lett.},
+keywords = {doi:10.1103/PhysRevLett.120.265501 url:https://doi},
+pages = {265501},
+publisher = {American Physical Society},
+title = {{Negative Hydration Expansion in ZrW2O8 : Microscopic Mechanism, Spaghetti Dynamics, and Negative Thermal Expansion}},
+url = {https://doi.org/10.1103/PhysRevLett.120.265501},
+volume = {120},
+year = {2018}
 }
 @article{Sadjadi2017,
 author = {Sadjadi, Mahdi and Bhattarai, Bishal and Drabold, D A and Thorpe, M F and Wilson, Mark},
@@ -1344,6 +1490,18 @@ pages = {3282--3292},
 title = {{Improved Angle Potentials for Coarse-Grained Molecular Dynamics Simulations}},
 volume = {9},
 year = {2013}
+}
+@article{Griffith2018,
+author = {Griffith, Austin D and Hoy, Robert S},
+doi = {10.1103/PhysRevE.98.042910},
+file = {:Users/David/Documents/Work/DPhil/Papers/PhysRevE.98.042910.pdf:pdf},
+journal = {Phys. Rev. E},
+keywords = {doi:10.1103/PhysRevE.98.042910 url:https://doi.org},
+pages = {042910},
+publisher = {American Physical Society},
+title = {{Densest versus jammed packings of two-dimensional bent-core trimers}},
+volume = {98},
+year = {2018}
 }
 @article{Torrie1977,
 author = {Torrie, G M and Valleau, J P},
@@ -1566,6 +1724,15 @@ title = {{Magnetic Frustration in an Iron-Based Cairo Pentagonal Lattice}},
 volume = {103},
 year = {2009}
 }
+@article{Comes1968,
+author = {Comes, R and Lambert, M and Guinier, A},
+file = {:Users/David/Documents/Work/DPhil/Papers/1-s2.0-0038109868905711-main.pdf:pdf},
+journal = {Solid State Commun.},
+pages = {715--719},
+title = {{THE CHAIN STHUCTURE OF BaT1O3 AND KNbO3}},
+volume = {6},
+year = {1968}
+}
 @article{LeRoux2013,
 author = {{Le Roux}, S and Rezai-Aria, F},
 doi = {10.1088/0022-3727/46/29/295301},
@@ -1575,6 +1742,17 @@ pages = {295301},
 title = {{Topological and metric properties of microscopic crack patterns : application to thermal fatigue of high temperature}},
 volume = {46},
 year = {2013}
+}
+@article{Kryuchkov2018,
+author = {Kryuchkov, N P and Yurchenko, S O and Fomin, Y D and Tsiok, Elena N and Ryzhov, Valentin N},
+doi = {10.1039/c7sm02429k},
+file = {:Users/David/Documents/Work/DPhil/Papers/c7sm02429k.pdf:pdf},
+journal = {Soft Matter},
+pages = {2152},
+publisher = {Royal Society of Chemistry},
+title = {{Complex crystalline structures in a two-dimensional core-softened system}},
+volume = {14},
+year = {2018}
 }
 @article{Blanc1979,
 abstract = {The description of isotropic polycrystalline structures such as those encountered in normal grain growth, is approached from a probabilistic point of view. The discussion is restricted to the distribution of grain shapes in two dimensional sections, as characterized by the topological parameter n, i.e. the number of sides or nearest neighbours, which is also known to be somehow related to grain dimensions. Assuming that only two elementary transformations (interchange of grain neighbours and creation or annihilation of 3-sided grains) can take place in the array, it is predicted that the mean coordination number mn of the nearest neighbours of all n-sided grains is related to n through Weaire's relation: mn = 5 + (6 + $\mu$2)/n in which $\mu$2 is the second central moment of the overall distribution of grain coordination numbers. The latter is generated by Monte-Carlo simulation and it is suggested that a 'normal polycrystalline structure' may be viewed as that grain array most likely to develop when both elementary transformations repeatedly occur at random. Since their relative proportions remain a priori unknown, at least one degree of freedom is available in the model and evolutionary processes, e.g. grain growth can be accounted for within its framework. It is shown with a particular example, that actual microstructures may be found, which can be adequately described by the present model. {\textcopyright} 1979.},
@@ -1698,6 +1876,16 @@ pages = {9973--9976},
 title = {{Global Geometry Optimization of Clusters Using Genetic Algorithms}},
 volume = {97},
 year = {1993}
+}
+@article{Hibble2011,
+author = {Hibble, Simon J and Chippindale, Ann M and Bilb, Edward J and Marelli, Elena and Harris, Peter J F and Hannon, Alex C},
+doi = {10.1021/ic101358q},
+file = {:Users/David/Documents/Work/DPhil/Papers/ic101358q.pdf:pdf},
+journal = {Inorg. Chem.},
+pages = {104--113},
+title = {{Structures of Pd (CN)2 and Pt (CN)2: Intrinsically Nanocrystalline Materials?}},
+volume = {50},
+year = {2011}
 }
 @article{Strogatz2001,
 author = {Strogatz, Steven H},
@@ -1836,6 +2024,17 @@ title = {{Vitreous 2D silica under tension : From brittle to ductile behaviour}}
 url = {https://doi.org/10.1016/j.msea.2020.139189},
 volume = {780},
 year = {2020}
+}
+@article{Pineros2016,
+author = {Pi{\~{n}}eros, William D and Baldea, Michael and Truskett, Thomas M},
+doi = {10.1063/1.4960113},
+file = {:Users/David/Documents/Work/DPhil/Papers/1.4960113.pdf:pdf},
+journal = {J. Chem. Phys.},
+pages = {054901},
+title = {{Designing convex repulsive pair potentials that favor assembly of kagome and snub square lattices}},
+url = {http://dx.doi.org/10.1063/1.4960113},
+volume = {145},
+year = {2016}
 }
 @article{Mousseau2001,
 abstract = {Continuous random network (CRN) models are often used as models for elemental and binary tetrahedral semiconductors such as a-Si and a-GaAs. Here, we review algorithms to generate CRN models. We discuss their structural properties and compare with those models obtained via different computational approaches, as well as with experiment. Additionally, we discuss current results towards the generation of para-crystalline models. ?? 2002 Elsevier Science Ltd. All rights reserved.},
