--- a/shortcuts.sty
+++ b/shortcuts.sty
@@ -5,6 +5,7 @@
 \newcommand{\abinitio}{\textit{ab initio}}
 \newcommand{\etal}{\textit{et al.}}
 \newcommand{\vs}{\textit{vs.}}
+\newcommand{\adinfinitum}{\textit{ad infinitum}}
 
 % Names
 \newcommand{\zach}{Zachariasen}
@@ -34,7 +35,10 @@
 \newcommand{\kb}{k_\text{B}}
 \newcommand{\dd}{\text{d}}
 \newcommand{\obj}{\Omega}
+\newcommand{\pme}{p^{\text{me}}}
 \newcommand{\br}[2]{\left\{#1,#2\right\}}
+%\newcommand{\pro}[2]{$\left\{#1,#2\right\}$}
+\newcommand{\pro}[2]{$#1,#2-$}
 
 % Vectors
 \newcommand{\vr}{\mathbf{r}}
